Demo-1/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CRMG_WF__Today__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__Workflow_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>